# math

./: CMakeLists.txt  README.md  math.pro
include/math/: AABB2.h  AABB3.h  area.h  axis_plane.h  camera.h  circle.h  defs.h  determinant.h  frustum.h  interpolation.h  intersection.h  mat3.h  mat4.h  plane.h  quad2.h  quad3.h  quat.h  rasterization.h  ray3.h  sampling.h  spatial.h  sphere.h  texel.h  triangle2.h  triangle3.h  utils.h  vec2.h  vec3.h  vec4.h
src/: AABB2.cc  AABB3.cc  area.cc  frustum.cc  interpolation.cc  intersection.cc  mat3.cc  mat4.cc  plane.cc  quat.cc  rasterization.cc  sampling.cc  spatial.cc  utils.cc  vec3.cc  vec4.cc
